--- a/es/index.html
+++ b/es/index.html
@@ -127,81 +127,59 @@
 	</article>
 
 
-
-
-
-
 	<article id="contact" class="wrapper style4">
-		<div class="container medium">
-			<header>
-				<h2>Hablemos.</h2>
-				<p>Escríbeme para agendar una cita o realizar alguna consulta profesional.</p>
-			</header>
-			<div class="row">
-				<div class="col-12">
-					<form method="POST" action="https://formspree.io/f/mzdapore">
-						<div class="row">
-							<div class="col-6 col-12-small">
-								<input type="text" name="name" id="name" placeholder="Your Name" required />
-							</div>
-							<div class="col-6 col-12-small">
-								<input type="email" name="email" id="email" placeholder="Email Address" required />
-							</div>
-							<div class="col-12">
-								<input type="text" name="subject" id="subject" placeholder="Subject" />
-							</div>
-							<div class="col-12">
-								<textarea name="message" id="message" placeholder="Message" required></textarea>
-							</div>
-							<input type="hidden" name="_next" value="https://drcorella-web.github.io/gracias.html">
+    <div class="container medium">
+        <header>
+            <h2>Hablemos.</h2>
+            <p>Escríbeme para agendar una cita o realizar alguna consulta profesional.</p>
+        </header>
+        <div class="row">
+            <div class="col-12">
+                <form method="post" action="https://formspree.io/f/mzdapore">
+                    <div class="row">
+                        <div class="col-6 col-12-small">
+                            <input type="text" name="name" id="name" placeholder="Nombre" required />
+                        </div>
+                        <div class="col-6 col-12-small">
+                            <input type="text" name="email" id="email" placeholder="Correo Electrónico" required />
+                        </div>
+                        <div class="col-12">
+                            <input type="text" name="subject" id="subject" placeholder="Asunto / Teléfono" />
+                        </div>
+                        <div class="col-12">
+                            <textarea name="message" id="message" placeholder="Mensaje" required></textarea>
+                        </div>
 
-							<div class="col-12">
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-									<li><input type="reset" value="Clear Form" class="alt" /></li>
-								</ul>
-							</div>
-						</div>
-					</form>
-				</div>
-				<div class="col-12">
-					<hr />
-					<div id="map" class="col-12">
-						<h3>Nuestra Ubicación</h3>
-						<div class="box style1" style="margin-bottom: 2em;">
-							<iframe
-								src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3356.551670987391!2d-114.74577992434003!3d32.70848907369324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzLCsDQyJzMwLjYiTiAxMTTCsDQ0JzM1LjUiVw!5e0!3m2!1ses-419!2smx!4v1738791011504!5m2!1ses-419!2smx"
-								width="100%" height="400" style="border:0; border-radius: 8px;" allowfullscreen=""
-								loading="lazy">
-							</iframe>
-							<p style="margin-top: 10px;">
-								<strong>Departamentos Verde</strong><br>
-								Sierra Coronado, Fraccionamiento del Valle, Los Algodones, B.C.
-							</p>
-						</div>
-					</div>
-				</div>
-				<ul class="social">
-					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-					<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-				</ul>
-				<hr />
+                        <input type="hidden" name="_next" value="https://drcorella-web.github.io/gracias.html">
 
-				<h3>Nuestra Ubicación en Los Algodones</h3>
-
-			</div>
-		</div>
-		<footer>
-			<ul id="copyright">
-				<li>&copy; Carlos Corella R. Todos los derechos reservados.</li>
-				<li>Diseño: <a href="http://html5up.net">HTML5 UP</a></li>
-			</ul>
-		</footer>
-		</div>
-	</article>
-
-
+                        <div class="col-12">
+                            <ul class="actions">
+                                <li><input type="submit" value="Enviar Mensaje" /></li>
+                                <li><input type="reset" value="Limpiar Formulario" class="alt" /></li>
+                            </ul>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="col-12">
+                <hr />
+                <h3>Encuéntrame en...</h3>
+                <ul class="social">
+                    <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+                    <li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+                    <li><a href="https://github.com/drcorella-web" class="icon brands fa-github"><span class="label">Github</span></a></li>
+                </ul>
+                <hr />
+            </div>
+        </div>
+        <footer>
+            <ul id="copyright">
+                <li>&copy; Carlos Corella R. Todos los derechos reservados.</li>
+                <li>Diseño: <a href="http://html5up.net">HTML5 UP</a></li>
+            </ul>
+        </footer>
+    </div>
+</article>
 
 
 
