--- a/es/index.html
+++ b/es/index.html
@@ -113,7 +113,7 @@
 					<article class="box style2">
 						<span class="image featured"><img src="images/clinica.jpg" alt="" /></span>
 
-						<h3><a href="https://drcorella-web.github.io/memorama/">Trivias y Desafíos</a></h3>
+						<h3><a href="https://drcorella-web.github.io/examenes/">Trivias y Desafíos</a></h3>
 
 						<p>Pon a prueba tus conocimientos con programas de preguntas y respuestas.</p>
 					</article>
@@ -215,5 +215,6 @@
 	<script src="assets/js/main.js"></script>
 
 </body>
+
 
 </html>
