--- a/en/index.html
+++ b/en/index.html
@@ -108,7 +108,7 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<span class="image featured"><img src="images/clinica.jpg" alt="" /></span>
-						<h3><a href="https://drcorella-web.github.io/memorama/">Trivia and Challenges</a></h3>
+						<h3><a href="https://drcorella-web.github.io/examenes/">Trivia and Challenges</a></h3>
 						<p>Test your knowledge with Q&A programs.</p>
 					</article>
 				</div>
@@ -119,14 +119,7 @@
 		</div>
 	</article>
 
-	Tienes toda la razón, Carlos. No basta con cambiar las palabras; si no ajustamos las etiquetas internas, el diseño
-	se rompe y aparecen esos cuadros blancos "chafas".
-
-	Aquí tienes el código exacto en español, con la estructura técnica corregida para que la "familia" de colores sea
-	uniforme (gris oscuro) y nada salga en blanco. He aplicado los cambios directamente sobre la estructura que me
-	pasaste:
-
-	HTML
+	
 	<article id="contact" class="wrapper style4">
 		<div class="container medium">
 			<header>
@@ -217,5 +210,6 @@
 	<script src="assets/js/main.js"></script>
 
 </body>
+
 
 </html>
